<resources>
    <string name="app_name">android-monitor-app</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_beras_medium">Harga Beras Medium</string>
    <string name="text_next">Next</string>
    <string name="text_minyak_kelapa">Harga Minyak Kelapa</string>
    <string name="text_tepung_terigu">Harga Tepung Terigu</string>
    <string name="text_kacang_kedelai">Harga Kacang Kedelai</string>
    <string name="text_gula_pasir">Harga Gula Pasir</string>
    <string name="text_mentega">Harga Mentega</string>
    <string name="text_telur_ayam">Harga Telur Ayam</string>
    <string name="text_daging_sapi">Harga Daging Sapi</string>
    <string name="text_ayam_potong">Harga Ayam Potong</string>
    <string name="text_ikan_lele">Harga Ikan Lele</string>
    <string name="text_tanggal">Tanggal</string>
    <string name="text_pasar">Pasar</string>
    <string name="text_cabe_hijau">Harga Cabe Hijau</string>
    <string name="text_cabe_merah">Harga Cabe Merah</string>
    <string name="text_bawang_merah">Harga Bawang Merah</string>
    <string name="text_cabe_rawit">Harga Cabe Rawit</string>
    <string name="text_bawang_putih">Harga Bawang Putih</string>
    <string name="text_tomat">Harga Tomat</string>
    <string name="text_wortel">Harga Wortel</string>
    <string name="text_kentang">Harga Kentang</string>
    <string name="text_pisang_ambon">Harga Pisang Ambon</string>
    <string name="text_jeruk">Harga Jeruk</string>
    <string name="text_gas_elpiji">Harga Gas Elpiji</string>
    <string name="text_save">Save</string>
    <string name="next_item_text">Next</string>
    <string name="save_item_text">Save</string>
    <string name="input_title">Input Data Harian</string>
    <string name="title_activity_main_menu">Home</string>
    <array name="list_pasar">
        <item>Pasar 1</item>
        <item>Pasar 2</item>
        <item>Pasar 3</item>
        <item>Pasar 4</item>
        <item>Pasar 5</item>
    </array>
    <string name="link_market_list">http://localhost:9000/api/markets</string>
    <string name="link_commodities_list">http://localhost:9000/api/commodities</string>
</resources>
