<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_ayam_potong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_ayam_potong"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_ikan_lele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_ikan_lele"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_cabe_merah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_cabe_merah"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_cabe_hijau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_cabe_hijau"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_bawang_merah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_bawang_merah"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_cabe_rawit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_cabe_rawit"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_bawang_putih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_bawang_putih"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_tomat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_tomat"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_wortel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_wortel"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_kentang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_kentang"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_pisang_ambon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_pisang_ambon"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_jeruk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_jeruk"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/input_gas_elpiji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_gas_elpiji"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>






    </LinearLayout>

</ScrollView>